matrix output for q6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,19 @@
 
 export(run_app)
 import(shiny)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,tibble)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
-importFrom(purrr,map)
+importFrom(purrr,map_df)
+importFrom(readr,read_csv)
+importFrom(readr,write_csv)
 importFrom(shiny,shinyApp)
 importFrom(shinysurveys,getSurveyData)
 importFrom(shinysurveys,renderSurvey)
 importFrom(shinysurveys,surveyOutput)
+importFrom(tidyr,pivot_wider)
 importFrom(utils,write.table)
