--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,13 @@ Depends:
     R (>= 2.10)
 Imports: 
     config (>= 0.3.1),
+    dplyr,
     golem,
     purrr,
+    readr,
     shiny (>= 1.7.2),
     shinysurveys,
+    tidyr,
     utils
 Suggests: 
     spelling,
