--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(purrr,map_df)
+importFrom(readr,col_character)
+importFrom(readr,cols)
 importFrom(readr,read_csv)
 importFrom(readr,write_csv)
 importFrom(shiny,shinyApp)
