msg when question incomplete

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(run_app)
 import(shiny)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,full_join)
+importFrom(dplyr,select)
 importFrom(dplyr,tibble)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
@@ -14,6 +16,7 @@ importFrom(readr,col_character)
 importFrom(readr,cols)
 importFrom(readr,read_csv)
 importFrom(readr,write_csv)
+importFrom(rlang,sym)
 importFrom(shiny,shinyApp)
 importFrom(shinysurveys,getSurveyData)
 importFrom(shinysurveys,renderSurvey)
