--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(run_app)
 import(shiny)
 importFrom(dplyr,bind_rows)
-importFrom(dplyr,full_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,select)
 importFrom(dplyr,tibble)
 importFrom(golem,activate_js)
